<resources>
    <string name="app_name">InEx</string>
    <string name="inex_catalogue">InEx Catalogue</string>
    <string name="Inex_capture_bill">Scan bill</string>
    <string name="inex_add_inex">Add Income/Expense</string>
    <string name="action_settings">Settings</string>
    <string name="label_description">Description</string>
    <string name="label_description_spent">Spent For</string>
    <string name="label_description_earned">Earned From</string>
    <array name="inex_options">
        <item>@string/label_description_spent</item>
        <item>@string/label_description_earned</item>
    </array>
    <string name="bill_saved">Bill saved</string>
    <string name="label_amount">Amount</string>
    <string name="label_date">On Date</string>
    <string name="save">Save</string>
    <string name="warning_field_cannot_be_empty"> \'%s\' cannot be empty</string>
    <string name="indian_rupee">\u20B9</string>
    <string name="total">Total : %s</string>
    <string name="amount">\u20B9%s</string>
    <string name="helper_description">Show the  bill, Tap somewhere in the bill for description</string>
    <string name="helper_amount">Show the bill, Tap somewhere in the bill for expenditure amount</string>
    <string name="backup_and_export">Backup and Export</string>
    <string name="import_and_restore">Import and Restore</string>
    <string name="notification_message_exporting">Exporting...</string>
    <string name="notification_message_importing">Importing...</string>
    <string name="not_our_backup_file">Not a backup file we are looking for!!!</string>
    <string name="notification_added_new_expense">Added Expense</string>
    <string name="delete">Delete</string>
    <string name="keep">Keep</string>
</resources>
