<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/add_inex_options"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/inex_options"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_below="@id/add_inex_options"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_inex_description"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:minHeight="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/label_description_spent"
            android:id="@+id/add_inex_label_description"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="left|start|top"
            android:minHeight="20dp"
            android:textSize="10sp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/add_inex_description"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_below="@id/add_inex_label_description"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_inex_amount"
            android:inputType="numberDecimal"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:minHeight="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/label_amount"
            android:id="@+id/add_inex_label_amount"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="left|start|top"
            android:minHeight="20dp"
            android:textSize="10sp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/add_inex_amount"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:layout_below="@id/add_inex_label_amount"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_inex_date"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:minHeight="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/label_date"
            android:id="@+id/add_inex_label_date"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="left|start|top"
            android:minHeight="20dp"
            android:textSize="10sp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/add_inex_date"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:layout_below="@id/add_inex_label_date"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_inex_save"
            android:text="@string/save"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:minHeight="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</ScrollView>